dodanie div.container do każdej sekcji

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <header class="page-top">
+      <div class="container">
       <a class="logo-link" href="index.html"
         >Web<span class="logo-link-dark-theme">Studio</span></a
       >
@@ -40,28 +41,31 @@
       <a class="contacts-links-top" href="mailto:info@devstudio.com"
         >info@devstudio.com</a
       >
-      <a class="contacts-links-top" href="tel:+48111111111">+48 111 111 111</a>
+      <a class="contacts-links-top" href="tel:+48111111111">+48 111 111 111</a></div>
     </header>
     <main class="page-main">
-      <div class="secion-filters">
-        <ul class="secion-filters-list">
-          <li class="secion-filters-list-item">
+      <section class="section-filters">
+        <div class="container">
+        <ul class="section-filters-list">
+          <li class="section-filters-list-item">
             <button class="button-filter" type="button">Wszystkie</button>
           </li>
-          <li class="secion-filters-list-item">
+          <li class="section-filters-list-item">
             <button class="button-filter" type="button">Strony</button>
           </li>
-          <li class="secion-filters-list-item">
+          <li class="section-filters-list-item">
             <button class="button-filter" type="button">Aplikacje</button>
           </li>
-          <li class="secion-filters-list-item">
+          <li class="section-filters-list-item">
             <button class="button-filter" type="button">Dizajn</button>
           </li>
-          <li class="secion-filters-list-item">
+          <li class="section-filters-list-item">
             <button class="button-filter" type="button">Marketing</button>
           </li>
-        </ul>
-      </div>
+        </ul></div>
+      </section>
+      <section class="images">
+        <div class="container">
       <ul class="images-list">
         <li class="images-list-item">
           <figure>
@@ -189,9 +193,10 @@
             </figcaption>
           </figure>
         </li>
-      </ul>
+      </ul></div></section>
     </main>
     <footer class="page-bottom">
+      <div class="container">
       <a class="logo-link" href="index.html"
         >Web<span class="logo-link-light-theme">Studio</span></a
       >
@@ -203,7 +208,7 @@
         <a class="contacts-links-bottom" href="tel:+48111111111"
           >+48 111 111 111</a
         >
-      </address>
+      </address></div>
     </footer>
   </body>
 </html>
