--- a/index.html
+++ b/index.html
@@ -19,166 +19,180 @@
   </head>
   <body>
     <header class="page-top">
-      <a class="logo-link" href="index.html"
-        >Web<span class="logo-link-dark-theme">Studio</span></a
-      >
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-list-item">
-            <a class="navigation-links" href="./index.html">Agencja </a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-links" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-links" href="./index.html">Kontakt</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="contacts-links-top" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="contacts-links-top" href="tel:+48111111111">+48 111 111 111</a>
+      <div class="container">
+        <a class="logo-link" href="index.html"
+          >Web<span class="logo-link-dark-theme">Studio</span></a
+        >
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-list-item">
+              <a class="navigation-links" href="./index.html">Agencja </a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-links" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-links" href="./index.html">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="contacts-links-top" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="contacts-links-top" href="tel:+48111111111"
+          >+48 111 111 111</a
+        >
+      </div>
     </header>
     <main class="page-main">
       <section class="block-main">
-        <h1 class="title-main">
-          EFEKTYWNE ROZWIĄZANIA <br />
-          DLA WASZEGO BIZNESU
-        </h1>
-        <button class="button-main" type="button">Zamów usługe</button>
+        <div class="container">
+          <h1 class="title-main">
+            EFEKTYWNE ROZWIĄZANIA <br />
+            DLA WASZEGO BIZNESU
+          </h1>
+          <button class="button-main" type="button">Zamów usługe</button>
+        </div>
       </section>
       <section class="section-descriptions">
-        <dl class="section-descriptions-list">
-          <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
-          <dd class="section-descriptions-list-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </dd>
+        <div class="container">
+          <dl class="section-descriptions-list">
+            <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
+            <dd class="section-descriptions-list-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </dd>
 
-          <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
-          <dd class="section-descriptions-list-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </dd>
+            <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
+            <dd class="section-descriptions-list-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </dd>
 
-          <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
-          <dd class="section-descriptions-list-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </dd>
+            <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
+            <dd class="section-descriptions-list-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </dd>
 
-          <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
-          <dd class="section-descriptions-list-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </dd>
-        </dl>
+            <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
+            <dd class="section-descriptions-list-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </dd>
+          </dl>
+        </div>
       </section>
       <section class="section-images">
-        <h2 class="section-title">Czym się zajmujemy</h2>
-        <ul class="section-images-list">
-          <li class="section-images-list-item">
-            <img
-              src="./images/main/image1.jpg"
-              alt="programista pracuje przy biurku w biurze"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="section-images-list-item">
-            <img
-              src="./images/main/image2.jpg"
-              alt="prjektant opracowuje aplikację na smartphony"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="section-images-list-item">
-            <img
-              src="./images/main/image3.jpg"
-              alt="prjektant pracuje z paletą kolorów na tablet"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Czym się zajmujemy</h2>
+          <ul class="section-images-list">
+            <li class="section-images-list-item">
+              <img
+                src="./images/main/image1.jpg"
+                alt="programista pracuje przy biurku w biurze"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="section-images-list-item">
+              <img
+                src="./images/main/image2.jpg"
+                alt="prjektant opracowuje aplikację na smartphony"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="section-images-list-item">
+              <img
+                src="./images/main/image3.jpg"
+                alt="prjektant pracuje z paletą kolorów na tablet"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-gray">
-        <h2 class="section-title">Nasz zespół</h2>
-        <ul class="section-gray-list">
-          <li class="section-gray-list-item">
-            <figure>
-              <img
-                src="./images/main/image4.jpg"
-                alt="mężczyzna w okularach i bordowej koszuli"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <h3 class="employee-name">John Doe</h3>
-                <p class="employee-position">Product Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="section-gray-list-item">
-            <figure>
-              <img
-                src="./images/main/image5.jpg"
-                alt="kobieta w okularach, z długimi blond włosami"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <h3 class="employee-name">John Doe</h3>
-                <p class="employee-position">Frontend Developer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="section-gray-list-item">
-            <figure>
-              <img
-                src="./images/main/image6.jpg"
-                alt="mężczyzna w niebieskiej koszuli"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <h3 class="employee-name">John Doe</h3>
-                <p class="employee-position">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li class="section-gray-list-item">
-            <figure>
-              <img
-                src="./images/main/image7.jpg"
-                alt="mężczyzna w okularach, ubrany w czarny t-shirt"
-                width="270"
-                height="260"
-              />
-              <figcaption>
-                <h3 class="employee-name">John Doe</h3>
-                <p class="employee-position">UI Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Nasz zespół</h2>
+          <ul class="section-gray-list">
+            <li class="section-gray-list-item">
+              <figure>
+                <img
+                  src="./images/main/image4.jpg"
+                  alt="mężczyzna w okularach i bordowej koszuli"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <h3 class="employee-name">John Doe</h3>
+                  <p class="employee-position">Product Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="section-gray-list-item">
+              <figure>
+                <img
+                  src="./images/main/image5.jpg"
+                  alt="kobieta w okularach, z długimi blond włosami"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <h3 class="employee-name">John Doe</h3>
+                  <p class="employee-position">Frontend Developer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="section-gray-list-item">
+              <figure>
+                <img
+                  src="./images/main/image6.jpg"
+                  alt="mężczyzna w niebieskiej koszuli"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <h3 class="employee-name">John Doe</h3>
+                  <p class="employee-position">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="section-gray-list-item">
+              <figure>
+                <img
+                  src="./images/main/image7.jpg"
+                  alt="mężczyzna w okularach, ubrany w czarny t-shirt"
+                  width="270"
+                  height="260"
+                />
+                <figcaption>
+                  <h3 class="employee-name">John Doe</h3>
+                  <p class="employee-position">UI Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-bottom">
-      <a class="logo-link" href="index.html"
-        >Web<span class="logo-link-light-theme">Studio</span></a
-      >
-      <address class="contacts-bottom">
-        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a class="contacts-links-bottom" href="mailto:info@example.com"
-          >info@example.com</a
+      <div class="container">
+        <a class="logo-link" href="index.html"
+          >Web<span class="logo-link-light-theme">Studio</span></a
         >
-        <a class="contacts-links-bottom" href="tel:+48111111111"
-          >+48 111 111 111</a
-        >
-      </address>
+        <address class="contacts-bottom">
+          <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+          <a class="contacts-links-bottom" href="mailto:info@example.com"
+            >info@example.com</a
+          >
+          <a class="contacts-links-bottom" href="tel:+48111111111"
+            >+48 111 111 111</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
