--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <header class="page-top">
       <div class="container">
+        <div class="header-left">
         <a class="logo-link" href="index.html"
           >Web<span class="logo-link-dark-theme">Studio</span></a
         >
@@ -36,12 +37,14 @@
             </li>
           </ul>
         </nav>
-        <a class="contacts-links-top" href="mailto:info@devstudio.com"
+      </div>
+       <div class="header-right">
+      <a class="contacts-links-top" href="mailto:info@devstudio.com"
           >info@devstudio.com</a
         >
         <a class="contacts-links-top" href="tel:+48111111111"
           >+48 111 111 111</a
-        >
+        ></div>
       </div>
     </header>
     <main class="page-main">
