--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
       </div>
        <div class="header-right">
-      <a class="contacts-links-top" href="mailto:info@devstudio.com"
+      <a class="contacts-links-top link-gap" href="mailto:info@devstudio.com"
           >info@devstudio.com</a
         >
         <a class="contacts-links-top" href="tel:+48111111111"
@@ -51,13 +51,13 @@
       <section class="block-main">
         <div class="container">
           <h1 class="title-main">
-            EFEKTYWNE ROZWIĄZANIA <br />
-            DLA WASZEGO BIZNESU
+            <p>EFEKTYWNE ROZWIĄZANIA</p>
+            <p>DLA WASZEGO BIZNESU</p>
           </h1>
           <button class="button-main" type="button">Zamów usługe</button>
         </div>
       </section>
-      <section class="section-descriptions">
+      <section class="section-descriptions section">
         <div class="container">
           <dl class="section-descriptions-list">
             <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
@@ -86,7 +86,7 @@
           </dl>
         </div>
       </section>
-      <section class="section-images">
+      <section class="section-images section">
         <div class="container">
           <h2 class="section-title">Czym się zajmujemy</h2>
           <ul class="section-images-list">
@@ -117,7 +117,7 @@
           </ul>
         </div>
       </section>
-      <section class="section-gray">
+      <section class="section-gray section">
         <div class="container">
           <h2 class="section-title">Nasz zespół</h2>
           <ul class="section-gray-list">
@@ -181,7 +181,7 @@
         </div>
       </section>
     </main>
-    <footer class="page-bottom">
+    <footer class="page-bottom section">
       <div class="container">
         <a class="logo-link" href="index.html"
           >Web<span class="logo-link-light-theme">Studio</span></a
