--- a/index.html
+++ b/index.html
@@ -21,30 +21,35 @@
     <header class="page-top">
       <div class="container">
         <div class="header-left">
-        <a class="logo-link" href="index.html"
-          >Web<span class="logo-link-dark-theme">Studio</span></a
-        >
-        <nav class="navigation">
-          <ul class="navigation-list">
-            <li class="navigation-list-item">
-              <a class="navigation-links" href="./index.html">Agencja </a>
-            </li>
-            <li class="navigation-list-item">
-              <a class="navigation-links" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li class="navigation-list-item">
-              <a class="navigation-links" href="./index.html">Kontakt</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-       <div class="header-right">
-      <a class="contacts-links-top link-gap" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="contacts-links-top" href="tel:+48111111111"
-          >+48 111 111 111</a
-        ></div>
+          <a class="logo-link" href="index.html"
+            >Web<span class="logo-link-dark-theme">Studio</span></a
+          >
+          <nav class="navigation">
+            <ul class="navigation-list">
+              <li class="navigation-list-item">
+                <a class="navigation-links" href="./index.html">Agencja </a>
+              </li>
+              <li class="navigation-list-item">
+                <a class="navigation-links" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="navigation-list-item">
+                <a class="navigation-links" href="./index.html">Kontakt</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header-right">
+          <a
+            class="contacts-links-top link-gap"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="contacts-links-top" href="tel:+48111111111"
+            >+48 111 111 111</a
+          >
+        </div>
       </div>
     </header>
     <main class="page-main">
@@ -59,31 +64,36 @@
       </section>
       <section class="section-descriptions section">
         <div class="container">
-          <dl class="section-descriptions-list">
-            <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
-            <dd class="section-descriptions-list-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </dd>
-
-            <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
-            <dd class="section-descriptions-list-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </dd>
-
-            <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
-            <dd class="section-descriptions-list-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </dd>
-
-            <dt class="section-descriptions-list-title">LOREM IPSUM</dt>
-            <dd class="section-descriptions-list-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </dd>
-          </dl>
+          <ul class="section-descriptions-list">
+            <li class="section-descriptions-list-item">
+              <h3 class="section-descriptions-list-title">LOREM IPSUM</h3>
+              <p class="section-descriptions-list-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="section-descriptions-list-item">
+              <h3 class="section-descriptions-list-title">LOREM IPSUM</h3>
+              <p class="section-descriptions-list-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="section-descriptions-list-item">
+              <h3 class="section-descriptions-list-title">LOREM IPSUM</h3>
+              <p class="section-descriptions-list-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="section-descriptions-list-item">
+              <h3 class="section-descriptions-list-title">LOREM IPSUM</h3>
+              <p class="section-descriptions-list-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section-images section">
