--- a/index.html
+++ b/index.html
@@ -132,56 +132,56 @@
           <h2 class="section-title">Nasz zespół</h2>
           <ul class="section-gray-list">
             <li class="section-gray-list-item">
-              <figure>
+              <figure class="section-gray-figure">
                 <img
                   src="./images/main/image4.jpg"
                   alt="mężczyzna w okularach i bordowej koszuli"
                   width="270"
                   height="260"
                 />
-                <figcaption>
+                <figcaption class="section-gray-figcaption">
                   <h3 class="employee-name">John Doe</h3>
                   <p class="employee-position">Product Designer</p>
                 </figcaption>
               </figure>
             </li>
             <li class="section-gray-list-item">
-              <figure>
+              <figure class="section-gray-figure">
                 <img
                   src="./images/main/image5.jpg"
                   alt="kobieta w okularach, z długimi blond włosami"
                   width="270"
                   height="260"
                 />
-                <figcaption>
+                <figcaption class="section-gray-figcaption">
                   <h3 class="employee-name">John Doe</h3>
                   <p class="employee-position">Frontend Developer</p>
                 </figcaption>
               </figure>
             </li>
             <li class="section-gray-list-item">
-              <figure>
+              <figure class="section-gray-figure">
                 <img
                   src="./images/main/image6.jpg"
                   alt="mężczyzna w niebieskiej koszuli"
                   width="270"
                   height="260"
                 />
-                <figcaption>
+                <figcaption class="section-gray-figcaption">
                   <h3 class="employee-name">John Doe</h3>
                   <p class="employee-position">Marketing</p>
                 </figcaption>
               </figure>
             </li>
             <li class="section-gray-list-item">
-              <figure>
+              <figure class="section-gray-figure">
                 <img
                   src="./images/main/image7.jpg"
                   alt="mężczyzna w okularach, ubrany w czarny t-shirt"
                   width="270"
                   height="260"
                 />
-                <figcaption>
+                <figcaption class="section-gray-figcaption">
                   <h3 class="employee-name">John Doe</h3>
                   <p class="employee-position">UI Designer</p>
                 </figcaption>
@@ -191,7 +191,7 @@
         </div>
       </section>
     </main>
-    <footer class="page-bottom section">
+    <footer class="page-bottom">
       <div class="container">
         <a class="logo-link" href="index.html"
           >Web<span class="logo-link-light-theme">Studio</span></a
