--- a/portfolio.html
+++ b/portfolio.html
@@ -20,195 +20,207 @@
   <body>
     <header class="page-top">
       <div class="container">
-      <a class="logo-link" href="index.html"
-        >Web<span class="logo-link-dark-theme">Studio</span></a
-      >
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-list-item">
-            <a class="navigation-links" href="./index.html">Agencja </a>
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-links-active" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li class="navigation-list-item">
-            <a class="navigation-links" href="./index.html">Kontakt</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="contacts-links-top" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="contacts-links-top" href="tel:+48111111111">+48 111 111 111</a></div>
+        <div class="header-left">
+          <a class="logo-link" href="index.html"
+            >Web<span class="logo-link-dark-theme">Studio</span></a
+          >
+          <nav class="navigation">
+            <ul class="navigation-list">
+              <li class="navigation-list-item">
+                <a class="navigation-links" href="./index.html">Agencja </a>
+              </li>
+              <li class="navigation-list-item">
+                <a class="navigation-links-active" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="navigation-list-item">
+                <a class="navigation-links" href="./index.html">Kontakt</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header-right">
+          <a
+            class="contacts-links-top link-gap"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="contacts-links-top" href="tel:+48111111111"
+            >+48 111 111 111</a
+          >
+        </div>
+      </div>
     </header>
-    <main class="page-main">
-      <section class="section-filters">
-        <div class="container">
-        <ul class="section-filters-list">
-          <li class="section-filters-list-item">
+    <main class="page-main section">
+      <div class="container">
+        <ul class="filters-list">
+          <li class="filters-list-item">
             <button class="button-filter" type="button">Wszystkie</button>
           </li>
-          <li class="section-filters-list-item">
+          <li class="filters-list-item">
             <button class="button-filter" type="button">Strony</button>
           </li>
-          <li class="section-filters-list-item">
+          <li class="filters-list-item">
             <button class="button-filter" type="button">Aplikacje</button>
           </li>
-          <li class="section-filters-list-item">
+          <li class="filters-list-item">
             <button class="button-filter" type="button">Dizajn</button>
           </li>
-          <li class="section-filters-list-item">
+          <li class="filters-list-item">
             <button class="button-filter" type="button">Marketing</button>
           </li>
-        </ul></div>
-      </section>
-      <section class="images">
-        <div class="container">
-      <ul class="images-list">
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img1.jpg"
-              alt="zdjęcia trzech pracowników, dwie kobiety i mężczyzna"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Technocrack</h3>
-              <p class="project-type">Strona internetowa</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img2.jpg"
-              alt="dwóch mężczyzn gra w koszykówkę"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Grafika New Orlean vs Golden Star</h3>
-              <p class="project-type">Dizajn</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img3.jpg"
-              alt="logo restauracji na tle ryby"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Restauracja Seafood</h3>
-              <p class="project-type">Aplikacja</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img4.jpg"
-              alt="czarne słuchawki nauszne"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Projekt Prime</h3>
-              <p class="project-type">Marketing</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img5.jpg"
-              alt="dwa kartonowe pudełka, białe i brązowe"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Projekt Boxes</h3>
-              <p class="project-type">Aplikacja</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img6.jpg"
-              alt="monitor komputera z wyświetloną stroną internetową"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Inspiration has no Borders</h3>
-              <p class="project-type">Strona internetowa</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img7.jpg"
-              alt="otwarte czasopismo"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Magazyn Limited Edition</h3>
-              <p class="project-type">Dizajn</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img8.jpg"
-              alt="biała papierowa etykieta z napisem Label Tag"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Projekt LAB</h3>
-              <p class="project-type">Marketing</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="images-list-item">
-          <figure>
-            <img
-              src="./images/portfolio/img9.jpg"
-              alt="mężczyzna pisze na laptopie"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <h3 class="project-title">Growing Business</h3>
-              <p class="project-type">Aplikacja</p>
-            </figcaption>
-          </figure>
-        </li>
-      </ul></div></section>
+        </ul>
+
+        <ul class="images-list">
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img1.jpg"
+                alt="zdjęcia trzech pracowników, dwie kobiety i mężczyzna"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Technocrack</h3>
+                <p class="project-type">Strona internetowa</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img2.jpg"
+                alt="dwóch mężczyzn gra w koszykówkę"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Grafika New Orlean vs Golden Star</h3>
+                <p class="project-type">Dizajn</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img3.jpg"
+                alt="logo restauracji na tle ryby"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Restauracja Seafood</h3>
+                <p class="project-type">Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img4.jpg"
+                alt="czarne słuchawki nauszne"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Projekt Prime</h3>
+                <p class="project-type">Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img5.jpg"
+                alt="dwa kartonowe pudełka, białe i brązowe"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Projekt Boxes</h3>
+                <p class="project-type">Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img6.jpg"
+                alt="monitor komputera z wyświetloną stroną internetową"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Inspiration has no Borders</h3>
+                <p class="project-type">Strona internetowa</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img7.jpg"
+                alt="otwarte czasopismo"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Magazyn Limited Edition</h3>
+                <p class="project-type">Dizajn</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img8.jpg"
+                alt="biała papierowa etykieta z napisem Label Tag"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Projekt LAB</h3>
+                <p class="project-type">Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="images-list-item">
+            <figure>
+              <img
+                src="./images/portfolio/img9.jpg"
+                alt="mężczyzna pisze na laptopie"
+                width="370"
+                height="294"
+              />
+              <figcaption>
+                <h3 class="project-title">Growing Business</h3>
+                <p class="project-type">Aplikacja</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </div>
     </main>
     <footer class="page-bottom">
       <div class="container">
-      <a class="logo-link" href="index.html"
-        >Web<span class="logo-link-light-theme">Studio</span></a
-      >
-      <address class="contacts-bottom">
-        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a class="contacts-links-bottom" href="mailto:info@example.com"
-          >info@example.com</a
+        <a class="logo-link" href="index.html"
+          >Web<span class="logo-link-light-theme">Studio</span></a
         >
-        <a class="contacts-links-bottom" href="tel:+48111111111"
-          >+48 111 111 111</a
-        >
-      </address></div>
+        <address class="contacts-bottom">
+          <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+          <p>
+            <a class="contacts-links-bottom" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </p>
+          <p>
+            <a class="contacts-links-bottom" href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
+          </p>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
