--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Technocrack</h3>
                 <p class="project-type">Strona internetowa</p>
               </figcaption>
@@ -95,7 +95,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Grafika New Orlean vs Golden Star</h3>
                 <p class="project-type">Dizajn</p>
               </figcaption>
@@ -109,7 +109,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Restauracja Seafood</h3>
                 <p class="project-type">Aplikacja</p>
               </figcaption>
@@ -123,7 +123,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Projekt Prime</h3>
                 <p class="project-type">Marketing</p>
               </figcaption>
@@ -137,7 +137,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Projekt Boxes</h3>
                 <p class="project-type">Aplikacja</p>
               </figcaption>
@@ -151,7 +151,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Inspiration has no Borders</h3>
                 <p class="project-type">Strona internetowa</p>
               </figcaption>
@@ -165,7 +165,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Magazyn Limited Edition</h3>
                 <p class="project-type">Dizajn</p>
               </figcaption>
@@ -179,7 +179,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Projekt LAB</h3>
                 <p class="project-type">Marketing</p>
               </figcaption>
@@ -193,7 +193,7 @@
                 width="370"
                 height="294"
               />
-              <figcaption>
+              <figcaption class="images-list-figcaption">
                 <h3 class="project-title">Growing Business</h3>
                 <p class="project-type">Aplikacja</p>
               </figcaption>
